syntax = "proto3";


package proto;

message ServerRespondMessage {
  string foundName;
}
